kubernetes/apps/bjj/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bjj-app
  namespace: bjj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bjj-app
  template:
    metadata:
      labels:
        app: bjj-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 32Mi
              cpu: "10m"
            limits:
              memory: 64Mi
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: html
          configMap:
            name: html
