kubernetes/apps/bjj/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bjj-app
  namespace: bjj
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: app.teamelwany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bjj-app
                port:
                  number: 80
