kubernetes/apps/bjj/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bjj-app
  namespace: bjj
spec:
  podSelector:
    matchLabels:
      app: bjj-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 80
  egress:
    - ports:
        - port: 5678
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: n8n
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
